tests/baselines/reference/assignmentCompatability43.errors.txt
==== tests/cases/compiler/assignmentCompatability43.ts (1 errors) ====
    module __test1__ {
        export interface interfaceWithPublicAndOptional<T,U> { one: T; two?: U; };  var obj4: interfaceWithPublicAndOptional<number,string> = { one: 1 };;
        export var __val__obj4 = obj4;
    }
    module __test2__ {
        export                   interface interfaceTwo<T,U> { one: T; two: U; };   var obj2: interfaceTwo<number,string> = { one: 1, two: "a" };;
        export var __val__obj2 = obj2;
    }
    __test2__.__val__obj2 = __test1__.__val__obj4
    ~~~~~~~~~~~~~~~~~~~~~
!!! assignmentCompatability43.ts(9,1): error TS2012: Cannot convert '__test1__.interfaceWithPublicAndOptional<number, string>' to '__test2__.interfaceTwo<number, string>':
!!! 	Property 'two' defined as optional in type '__test1__.interfaceWithPublicAndOptional<T, U>', but is required in type '__test2__.interfaceTwo<T, U>'.